--- a/module-6-starter/single-repo.html
+++ b/module-6-starter/single-repo.html
@@ -25,7 +25,9 @@
   </header>
   
   <main>
-  
+    <div id="limit-warning">
+
+    </div>
   </main>
   <script src="./assets/js/single.js"></script>
 </body>
